k8s/overlays/staging/ingress/ingress-patch.yaml
# This config file is used by the new K8s Cluster
# Kubectl Server Version: v1.21.4
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tark-ingress
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #     - dev-tark.ensembl.org
  rules:
  - host: dev-tark.ensembl.org
    http:
      paths:
      # URL ROUTING 
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: django-cluster-ip-service
            port:
              number: 8000
